--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -6,9 +6,9 @@
 </IfModule>
 
 <IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/html text/plain text/css text/javascript application/x-javascript application/font-woff
+    AddOutputFilterByType DEFLATE text/html text/plain text/css text/javascript application/x-javascript application/font-woff application/font-woff2
 
-<FilesMatch "\\.(js|css|woff|ttf|eot|otf)$">
+<FilesMatch "\\.(js|css|woff|woff2|ttf|eot|otf)$">
   SetOutputFilter DEFLATE
 </FilesMatch>
 </IfModule>
@@ -18,6 +18,7 @@
   AddType application/x-font-ttf .ttf
   AddType application/x-font-opentype .otf
   AddType application/x-font-woff .woff
+  AddType application/x-font-woff2 .woff2
   AddType image/svg+xml .svg
   ExpiresActive On
   ExpiresByType text/css "access plus 10 years"
@@ -26,10 +27,12 @@
   ExpiresByType application/x-javascript "access plus 10 years"
   ExpiresByType application/javascript "access plus 10 years"
   ExpiresByType application/font-woff "access plus 10 years"
+  ExpiresByType application/font-woff2 "access plus 10 years"
   ExpiresByType application/vnd.ms-fontobject "access plus 10 years"
   ExpiresByType application/x-font-ttf "access plus 10 years"
   ExpiresByType application/x-font-opentype "access plus 10 years"
   ExpiresByType application/x-font-woff "access plus 10 years"
+  ExpiresByType application/x-font-woff2 "access plus 10 years"
   ExpiresByType image/svg+xml "access plus 10 years"
   ExpiresByType image/png "access plus 10 years"
   ExpiresByType image/x-icon "access plus 10 years"
