Корректировка composer.jscon

--- a/app/composer.json
+++ b/app/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "vamshop",
     "require": {
-        "simplepie/simplepie": "1.5"
+        "simplepie/simplepie": "~1.5"
     },
     "config": {
         "vendor-dir": "Vendor/"
