--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,11 @@
-# see http://about.travis-ci.org/docs/user/languages/php/ for more hints
 language: php
 
-# list any PHP version you want to test against
 php:
-  # using major version aliases
-
+  - 5.4
+  - 5.5
   - 5.6
-  # aliased to a recent 7.x version
   - 7.0
-  # aliased to a recent 7.x version
   - 7.1
-  # aliased to a recent 7.x version
   - 7.2
-  # aliased to a recent hhvm version
-  - hhvm
 
-# optionally specify a list of environments, for example to test different RDBMS
-env:
-  - DB=mysql
-
-# optionally set up exclutions and allowed failures in the matrix
-matrix:
-  exclude:
-    - php: hhvm
-  allow_failures:
-    - php: hhvm
-
-# execute any number of scripts before the test run, custom env's are available as variables
-before_script:
-  - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS hello_world_test;" -uroot; fi
+script: build.sh
