--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -6,7 +6,7 @@
 </IfModule>
 
 <IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/html text/plain text/css text/javascript text/json application/x-javascript application/font-woff application/font-woff2
+    AddOutputFilterByType DEFLATE text/html text/plain text/css text/javascript text/json application/json application/x-javascript application/font-woff application/font-woff2
 
 <FilesMatch "\\.(js|json|css|woff|woff2|ttf|eot|otf)$">
   SetOutputFilter DEFLATE
@@ -25,6 +25,7 @@
   ExpiresByType text/js "access plus 10 years"
   ExpiresByType text/json "access plus 10 years"
   ExpiresByType text/javascript "access plus 10 years"
+  ExpiresByType application/json "access plus 10 years"
   ExpiresByType application/x-javascript "access plus 10 years"
   ExpiresByType application/javascript "access plus 10 years"
   ExpiresByType application/font-woff "access plus 10 years"
